--- a/turbo/generators/templates/package/package.json.hbs
+++ b/turbo/generators/templates/package/package.json.hbs
@@ -7,14 +7,14 @@
   "description": "{{{ description }}}",
   "license": "MIT",
   {{#if shouldPublish}}
-  "author": "tszhong0411 <me@yuricunha.com> (https://github.com/tszhong0411/)",
-  "homepage": "https://github.com/tszhong0411/beta-website#readme",
+  "author": "tszhong0411 <me@honghong.me> (https://github.com/tszhong0411/)",
+  "homepage": "https://github.com/tszhong0411/honghong.me#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tszhong0411/beta-website.git"
+    "url": "git+https://github.com/tszhong0411/honghong.me.git"
   },
   "bugs": {
-    "url": "https://github.com/tszhong0411/beta-website/issues"
+    "url": "https://github.com/tszhong0411/honghong.me/issues"
   },
   "files": [
     "dist"
